@@ -1,3 +1,7 @@
+2001-10-23  Alan Modra  <amodra@bigpond.net.au>
+
+	* internal.h: White space changes to keep lines under 80 chars.
+
 2001-10-16  Jeff Holcomb  <jeffh@redhat.com>
 
 	* internal.h (elf_internal_shdr): Make contents a unsigned char *.
